@@ -1,3 +1,8 @@
+2002-12-18  Tomas Styblo  <tripie@cpan.org>
+
+	* hotlist.c (update_path_name): Update the title even when
+	opening an empty group.
+
 2002-12-16  Pavel Roskin  <proski@gnu.org>
 
 	* dir.c (do_load_dir): Add an error message if mc_opendir()
